--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Momentum App</title>
   </head>
+  <body>
     <h2 id="clock">00:00</h2>
-    <form><input type="text"
-    placeholder="What is your name?"
-    maxlength="15"
-    required
-     />
-     <button>Log in</button>
+    <form class="hidden" id="login-form">
+      <input
+        type="text"
+        placeholder="What is your name?"
+        maxlength="15"
+        required
+      />
+      <button>Log in</button>
     </form>
+    <h1 class="hidden" id="greeting"></h1>
     <script src="js/clock.js"></script>
+    <script src="js/greeting.js"></script>
   </body>
 </html>
