--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <h1 class="hidden" id="greeting"></h1>
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
