--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h2 id="clock">00:00</h2>
+    <h1 class="hidden" id="greeting"></h1>
     <form class="hidden" id="login-form">
       <input
         type="text"
@@ -18,9 +19,13 @@
       />
       <button>Log in</button>
     </form>
-    <h1 class="hidden" id="greeting"></h1>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/quotes.js"></script>
   </body>
 </html>
