--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <h2 id="clock">00:00</h2>
-    <h1 class="hidden" id="greeting"></h1>
     <form class="hidden" id="login-form">
       <input
         type="text"
@@ -19,6 +18,15 @@
       />
       <button>Log in</button>
     </form>
+    <h1 class="hidden" id="greeting"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" required />
+    </form>
+    <ul id="todo-list">
+      <!-- <li>
+        <span></span>
+      </li> -->
+    </ul>
     <div id="quote">
       <span></span>
       <span></span>
@@ -27,5 +35,6 @@
     <script src="js/greeting.js"></script>
     <script src="js/background.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
