--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
     <form id="todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter" required />
     </form>
-    <ul id="todo-list">
-      <!-- <li>
-        <span></span>
-      </li> -->
-    </ul>
+    <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
       <span></span>
